# Auto-Ballooning

./: .gitignore  LICENSE  README.md  environment.yml  main.py  postprocess.py  requirements.txt  schemas.py
edocr2/: ocr_it.py
edocr2/models/edocr2-1.0.0/: .gitignore  LICENSE  README.md  llm_result.txt  llm_result_rawgpt.txt  ocr_it.py  pyproject.toml  requirements.txt  test_all.py  test_drawing.py  test_llm.py  test_train.py
edocr2/models/edocr2-1.0.0/docs/: install.md
edocr2/models/edocr2-1.0.0/edocr2/tools/: layer_segm.py  llm_tools.py  ocr_pipelines.py
edocr2/models/edocr2-1.0.0/tests/test_samples/: Adapterplatte.csv  Adapterplatte.json  BM_part.csv  BM_part.json  Candle_holder.csv  Candle_holder.json  Gripper.csv  Gripper.json  LIU0010.csv  LIU0010.json  example_dwg.csv  example_dwg.json  halter.csv  halter.json
shit/V000027_0_0 Drive shaft_ Includes both turning and milling_/: dimension_results.csv  gdt_results.csv  other_info.csv  table_results.csv
static/: index.html
