[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edocr2"
version = "0.0.1"
authors = [
  { name="Javier Villena Toro" },
]
description = "OCR for Engineering Mechanical Drawings"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/javvi51/edocr2"
"Bug Tracker" = "https://github.com/javvi51/edocr2/issues"

[tool.setuptools]
include-package-data = false
